--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-paginate": "^7.1.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3"
