change logo and add icons to about page

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,17 +3,17 @@
   "name": "Shai's portfolio",
   "icons": [
     {
-      "src": "Images/Icon/favicon.ico",
+      "src": "Images/Logo/favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "Images/Icon/logo192.png",
+      "src": "Images/Logo/logo192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "Images/Icon/logo512.png",
+      "src": "Images/Logo/logo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
